--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h2 {
     cursor: pointer;
 }
 
-#button-black,
+#button-pen,
 #button-random,
 #button-erase,
 #button-reset,
@@ -59,8 +59,8 @@ h2 {
     margin-right: 10px;
 }
 
-#button-black {
-    background-color: black;
+#button-pen {
+    background-color: #03f13e;
 }
 
 .button:hover {
@@ -83,7 +83,7 @@ h2 {
     background-color: #001111;
 }
 
-#button-black,
+#button-pen,
 #button-random,
 #button-erase,
 #button-reset,
@@ -91,32 +91,31 @@ h2 {
     width: 140px;
 }
 
-.icon.pen,
+.icon.pen {
+    margin-left: 11px;
+}
+
 .icon.erase,
 .icon.reset {
     margin-left: 13px;
 }
 
 .icon.random {
-    margin-left: 6px;
+    margin-left: 7px;
 }
 
-.icon.pen {
-    color: black;
-    background-color: white;
-}
 
 .icon.toggle {
-    margin-left: 5px;
+    margin-left: 6px;
 }
 
 .text.pen {
     margin-left: 6px;
-    color: white;
 }
 
 .text.erase,
-.text.reset {
+.text.reset,
+.text.pen {
     margin-left: 8px;
     color: #000C66;
 }
@@ -163,6 +162,17 @@ h2 {
     color: black;
 }
 
+i.fas {
+    border: solid 1px grey;
+    border-radius: 30px;
+    font-size: 20pt;
+    padding: 10px;
+    margin-left: 52px;
+    background: #03f13e;
+    color: burlywood;
+    cursor: pointer;
+}
+
 
 @media (max-width: 650px) {
     #sketchpad {
@@ -179,32 +189,4 @@ h2 {
         gap: 15px;
     }
 
-}
-
-@media (max-width: 1910px) {
-    #color:before {
-        content: '';
-        width: 30px;
-        height: 30px;
-        left: 47.9%;
-        top: 70.9%;
-        background: url('./image/pen.png');
-        position: absolute;
-        display: none;
-    }
-
-}
-
-
-@media screen and (max-width: 1920px),
-screen and (max-height: 969px) !important {
-    #color:before {
-        content: '';
-        width: 30px;
-        height: 30px;
-        left: 47.9%;
-        top: 70.9%;
-        background: url('./image/pen.png');
-        position: absolute;
-    }
 }
